fix(assets/css): normalize whitespace around toc when post images present

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -36,6 +36,9 @@ main, footer {
   animation: intro 0.3s both;
   animation-delay: 0.15s;
 }
+header:first-of-type + details {
+  margin-top: 1rem;
+}
 footer time[datetime$="M"]:before {
   content: "\2013\0020";
 }
